Fixes #330, put the growl notifications behind the blur during guided setup

--- a/Apps/UseUI/static/css/style.css
+++ b/Apps/UseUI/static/css/style.css
@@ -981,7 +981,7 @@ nav#application-navigation > ul > li
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, .5);
-  z-index: 100;
+  z-index: 10000;
   width: 100%;
   height: 100%;
 }
